<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:contentDescription="@string/more"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/actionbar"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/actionbar_bg_orange"
        android:gravity="center" >
        
        <ImageView
            android:id="@+id/actionbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:contentDescription="@string/back_to_main"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="12dp"
            android:paddingTop="8dp"
            android:src="@drawable/back" />
        

        <TextView
            android:id="@+id/actionbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:shadowColor="@android:color/black"
            android:shadowDx="0"
            android:shadowDy="-1"
            android:shadowRadius="1"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/actionbar_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:contentDescription="@string/refresh"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="8dp"
            android:src="@drawable/refresh" />
    </FrameLayout>

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:background="@android:color/white"
        android:paddingTop="8dp" />

    <RatingBar
        android:id="@+id/product_summary_setRating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        android:numStars="5"
        android:stepSize="0.1" />

   <TextView
        android:id="@+id/product_summary_review_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/someauthor"
        android:textColor="#9c9186"
        android:textSize="14sp"
        android:textStyle="bold" />
	<ScrollView 
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/scroll" 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.68"
	        android:orientation="vertical" >
	
	       <TextView
	           android:id="@+id/comments_list_item_text"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:layout_below="@+id/comments_list_item_author"
	           android:layout_marginTop="10dp"
	           android:text="@string/no_topic"
	           android:textColor="#262321"
	           android:textSize="16sp" />
	       
	       <Button
		      android:id="@+id/product_full_review"
		      android:layout_width="wrap_content"
		      android:layout_height="40dp"
		      android:layout_gravity="center"
		      android:background="@drawable/rounded_button"
		      android:paddingLeft="10dp"
		      android:paddingRight="10dp"
		      android:text="@string/full_review"
		      android:textColor="#262321"
		      android:shadowColor="@android:color/white"
		      android:shadowDx="0"
		      android:shadowDy="1"
		      android:shadowRadius="1"
		      android:textSize="20sp"/>
	    </LinearLayout>
	   </ScrollView>  
     
</LinearLayout>