<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:contentDescription="@string/more"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/actionbar"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/actionbar_bg_orange"
        android:gravity="center" >
        
        <ImageView
            android:id="@+id/actionbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:contentDescription="@string/back_to_main"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="12dp"
            android:paddingTop="8dp"
            android:src="@drawable/back" />
        

        <TextView
            android:id="@+id/actionbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:shadowColor="@android:color/black"
            android:shadowDx="0"
            android:shadowDy="-1"
            android:shadowRadius="1"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/actionbar_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:contentDescription="@string/refresh"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="8dp"
            android:src="@drawable/refresh" />

    </FrameLayout>
    
    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:background="@android:color/white"
        android:paddingTop="8dp" />
    
	    <Button
	      android:id="@+id/product_price"
	      android:layout_width="wrap_content"
	      android:layout_height="40dp"
	      android:layout_gravity="center"
	      android:background="@drawable/rounded_button"
	      android:paddingLeft="10dp"
	      android:paddingRight="10dp"
	      android:shadowColor="@android:color/white"
	      android:shadowDx="0"
	      android:shadowDy="1"
	      android:shadowRadius="1"
	      android:textColor="#797979"
	      android:textSize="20sp"
	      android:visibility="gone"/> 

    <ListView
        android:id="@+id/product_review_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/peach"
        android:cacheColorHint="@color/peach"
        android:divider="#f0dfce"
        android:dividerHeight="1dp"
        android:fadingEdge="none" />

    <TextView
        android:id="@+id/main_empty_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/peach"
        android:text="@string/loading"
        android:gravity="center"
        android:textSize="26sp"
        android:textColor="#c3b5a7" >
    </TextView>

</LinearLayout>